# MiniSedric

./: .gitignore  .zshrc  DockerfileLambda  LICENSE  README.md  pyproject.toml
docs/: architecture.md
infrastructure/test/: .terraform.lock.hcl  ecr.tf  get-aws-region.sh  lambda.tf  main.tf  s3.tf  transcribe.tf
src/: main.py
src/api/models/: InsigntsModel.py  InteractionAnalyzerRequest.py  InteractionAnalyzerResponse.py  UploadResponseModel.py
src/api/routes/: interaction.py  main.py  upload_file_to_s3.py
src/core/: config.py  logging.py
src/core/settings/: app.py  base.py  development.py  production.py  test.py
src/services/: analyze_interaction.py
